# county_seat_coords

./: README.md  pyproject.toml
county_seat_coords/: fetch_county_seat_coords.py
results/: ca_usa_county_seats.csv
