[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "county_seats_coords"
description = "Get coordinates per county seat from Wikipedia."
authors = [
  {name = "David Faden", email = "dfaden@gmail.com"},
]
version = "0.1.0"
license = {text = "MIT License"}
dependencies = ["beautifulsoup4", "requests"]
