[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "county_seats_coords"
description = "Get coordinates per county seat from Wikipedia."
authors = [
  {name = "David Faden", email = "dfaden@gmail.com"},
]
version = "0.2.0"
license = "MIT"
dependencies = ["beautifulsoup4", "requests"]
